# async-imap

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: Cargo.toml  README.md  basic.rs  futures.rs  gmail_oauth2.rs  idle.rs  rustls.rs  socks5.rs  tokio.rs
src/: authenticator.rs  client.rs  codec.rs  error.rs  imap_stream.rs  lib.rs  mock_stream.rs  parse.rs
src/extensions/: id.rs  idle.rs  metadata.rs  mod.rs  quota.rs
src/types/: capabilities.rs  fetch.rs  id_generator.rs  mailbox.rs  mod.rs  name.rs  quota.rs  request.rs  response_data.rs  thirdparty.rs
tests/: imap_integration.rs
