[package]
name = "async-imap"
version = "0.2.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
documentation = "https://docs.rs/async-imap/"
repository = "https://github.com/async-email/async-imap"
homepage = "https://github.com/async-email/async-imap"
description = "Async IMAP client for Rust"
readme = "README.md"
license = "Apache-2.0/MIT"
edition = "2018"

keywords = ["email", "imap"]
categories = ["email", "network-programming"]

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "async-email/async-imap" }
is-it-maintained-open-issues = { repository = "async-email/async-imap" }

[features]
default = []

[dependencies]
imap-proto = "0.10"
nom = "5.0"
base64 = "0.11"
chrono = "0.4"
async-native-tls = "0.3.0"
async-std = { version = "1.4.0", default-features = false, features = ["std"] }
pin-utils = "0.1.0-alpha.4"
futures = "0.3.0"
rental = "0.5.5"
stop-token = { version = "0.1.1", features = ["unstable"] }
byte-pool = "0.2.1"
lazy_static = "1.4.0"
log = "0.4.8"
thiserror = "1.0.9"

[dev-dependencies]
lettre_email = "0.9"
pretty_assertions = "0.6.1"
async-smtp = "0.2.0"
async-std = { version = "1.4.0", default-features = false, features = ["std", "attributes"] }

[[example]]
name = "basic"
required-features = ["default"]

[[example]]
name = "gmail_oauth2"
required-features = ["default"]

[[test]]
name = "imap_integration"
required-features = ["default"]
