[package]
name = "async-imap"
version = "0.5.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
documentation = "https://docs.rs/async-imap/"
repository = "https://github.com/async-email/async-imap"
homepage = "https://github.com/async-email/async-imap"
description = "Async IMAP client for Rust"
readme = "README.md"
license = "Apache-2.0/MIT"
edition = "2018"

keywords = ["email", "imap"]
categories = ["email", "network-programming"]

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "async-email/async-imap" }
is-it-maintained-open-issues = { repository = "async-email/async-imap" }

[features]
default = []

[dependencies]
imap-proto = "0.14.3"
nom = "6.0"
base64 = "0.13"
chrono = "0.4"
async-native-tls = { version = "0.3.3" }
async-std = { version = "1.8.0", default-features = false, features = ["std"] }
pin-utils = "0.1.0-alpha.4"
futures = "0.3.15"
ouroboros = "0.9"
stop-token = "0.2"
byte-pool = "0.2.2"
once_cell = "1.8.0"
log = "0.4.8"
thiserror = "1.0.9"

[dev-dependencies]
lettre_email = "0.9"
pretty_assertions = "0.6.1"
async-smtp = { version = "0.3.0" }
async-std = { version = "1.8.0", default-features = false, features = ["std", "attributes"] }

[[example]]
name = "basic"
required-features = ["default"]

[[example]]
name = "gmail_oauth2"
required-features = ["default"]

[[test]]
name = "imap_integration"
required-features = ["default"]
